--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,7 +31,8 @@
         "less/global.less",
         "less/nav.less",
         "less/hero-gallery.less",
-        "less/estudio.less"
+        "less/estudio.less",
+        "less/servicios.less"
       ]
     }
   ],
