--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,7 +32,8 @@
         "less/nav.less",
         "less/hero-gallery.less",
         "less/estudio.less",
-        "less/servicios.less"
+        "less/servicios.less",
+        "less/proyectos.less"
       ]
     }
   ],
