--- a/prepros-6.config
+++ b/prepros-6.config
@@ -30,10 +30,21 @@
       "imports": [
         "less/global.less",
         "less/nav.less",
+        "less/menu-desplegable.less",
         "less/hero-gallery.less",
         "less/estudio.less",
         "less/servicios.less",
-        "less/proyectos.less"
+        "less/proyectos.less",
+        "less/contacto.less",
+        "less/footer.less"
+      ]
+    },
+    {
+      "path": "less/proyects-page.less",
+      "imports": [
+        "less/global.less",
+        "less/nav.less",
+        "less/footer.less"
       ]
     }
   ],
