--- a/prepros-6.config
+++ b/prepros-6.config
@@ -44,7 +44,9 @@
       "imports": [
         "less/global.less",
         "less/nav.less",
-        "less/footer.less"
+        "less/menu-desplegable.less",
+        "less/footer.less",
+        "less/full-gallery.less"
       ]
     }
   ],
