previo revision final -  restan reemplazar imágenes de galerías

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,6 +33,7 @@
         "less/menu-desplegable.less",
         "less/hero-gallery.less",
         "less/estudio.less",
+        "less/lines-wrapper.less",
         "less/servicios.less",
         "less/proyectos.less",
         "less/contacto.less",
