--- a/prepros-6.config
+++ b/prepros-6.config
@@ -17,9 +17,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "less"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
