probando implementación en galería, imágenes responsivas - rotan según el tipo de imágen y la orientación del dispositivo

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -17,7 +17,9 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "js"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
