--- a/prepros-6.config
+++ b/prepros-6.config
@@ -18,7 +18,7 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "js"
+      "less"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
